# feather-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Kconfig  Makefile  README.md  cmake_install.cmake  compile_commands.json  conanfile.py
include/: audio.h  audio_fn.h  context2d.h  controller.h  err.h  feather.h  font.h  intrinsics.h  layer.h  lock.h  log.h  physics.h  rect.h  res.h  runtime.h  scene.h  shader.h  tllist.h
include/insc/: intrinsics.h  log.h
profiles/: asm-js.profile  wasm.profile
shaders/: rect.frag.glsl  rect.vert.glsl
src/: feather.c  runtime.c
src/core/: audio.c  context2d.c  controller.c  font.c  lock.c  physics.c  rect.c  res.c  scene.c  shader.c
src/misc/: err.c  intrinsics.c  log.c
test_package/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  conanfile.py  flappy  layer_counter  life  minimal  movement_2d  rectangle  resource
test_package/src/: animation.c  flappy.c  layer_counter.c  life.c  minimal.c  movement_2d.c  rectangle.c  resource.c  scenes.c  terminal.c
